infrastructure/logging/logging-stack-network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: logging-security-policy
  namespace: logging
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": logging
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": ingress-nginx
        app.kubernetes.io/name: ingress-nginx
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": monitoring
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": logging
  - toEntities:
    - kube-apiserver
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "6443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
